--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -202,10 +202,10 @@
         event.preventDefault();
         const loader = document.getElementById("loader");
         loader.style.display = "block";
-
-        document.getElementById("form1").style.disabled = true
-        document.getElementById("form2").style.disabled = true
-        document.getElementById("form3").style.disabled = true
+        console.log("disable form ---- ", document.getElementById("form1").disabled)
+        document.getElementById("form1").disabled = true
+        document.getElementById("form2").disabled = true
+        document.getElementById("form3").disabled = true
 
         document.getElementById("success-alert").style.display = "none";
         document.getElementById("fail-alert").style.display = "none";
@@ -220,9 +220,9 @@
           .then((data) => {
             console.log(data);
             loader.style.display = "none";
-            document.getElementById("form1").style.disabled = false
-            document.getElementById("form2").style.disabled = false
-            document.getElementById("form3").style.disabled = false
+            document.getElementById("form1").disabled = false
+            document.getElementById("form2").disabled = false
+            document.getElementById("form3").disabled = false
             if (data.message) {
               document.getElementById("success-alert").style.display = "block";
               fetch(data.videoUrl) // Assuming 'data.videoUrl' contains the video download URL
