--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -220,9 +220,9 @@
           .then((data) => {
             console.log(data);
             loader.style.display = "none";
-            document.getElementById("form1").disabled = false
-            document.getElementById("form2").disabled = false
-            document.getElementById("form3").disabled = false
+            // document.getElementById("form1").disabled = false
+            // document.getElementById("form2").disabled = false
+            // document.getElementById("form3").disabled = false
             if (data.message) {
               document.getElementById("success-alert").style.display = "block";
               fetch(data.videoUrl) // Assuming 'data.videoUrl' contains the video download URL
