--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -206,8 +206,8 @@
         document.getElementById("form1-submit").disabled = true
         document.getElementById("form2-submit").disabled = true
         document.getElementById("form3-submit").disabled = true
-        
-        inputs = document.getElementsByName(file);
+
+        inputs = document.getElementsByName("file");
         inputs.map(input => {
           input.disabled = true
         })
