--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,10 +57,10 @@
       <h1 class="text-center mb-4">AI Video Generator</h1>
 
       <!-- Success and Failure Alerts -->
-      <div id="success-alert" class="alert success d-none" role="alert">
+      <div id="success-alert" class="alert success" role="alert">
         AI video created successfully!
       </div>
-      <div id="fail-alert" class="alert fail d-none" role="alert">
+      <div id="fail-alert" class="alert fail" role="alert">
         AI video creation failed!
       </div>
 
@@ -79,6 +79,7 @@
               <input
                 type="file"
                 name="file1"
+                id="file1"
                 class="form-control form1-input"
               />
             </div>
@@ -87,6 +88,7 @@
               <input
                 type="file"
                 name="file2"
+                id="file2"
                 class="form-control form1-input"
               />
             </div>
@@ -110,18 +112,20 @@
             {% csrf_token %}
             <input type="hidden" name="form_type" value="form2" />
             <div class="mb-3">
-              <label for="file1" class="form-label">Image 1</label>
+              <label for="file3" class="form-label">Image 1</label>
               <input
                 type="file"
                 name="file1"
+                id="file3"
                 class="form-control form2-input"
               />
             </div>
             <div class="mb-3">
-              <label for="file2" class="form-label">Image 2</label>
+              <label for="file4" class="form-label">Image 2</label>
               <input
                 type="file"
                 name="file2"
+                id="file4"
                 class="form-control form2-input"
               />
             </div>
@@ -145,8 +149,13 @@
             {% csrf_token %}
             <input type="hidden" name="form_type" value="form3" />
             <div class="mb-3">
-              <label for="file" class="form-label">Image</label>
-              <input type="file" name="file" class="form-control form3-input" />
+              <label for="file5" class="form-label">Image</label>
+              <input
+                type="file"
+                name="file"
+                id="file5"
+                class="form-control form3-input"
+              />
             </div>
             <button
               type="submit"
@@ -184,8 +193,6 @@
               event.target.value = "";
               return;
             }
-
-            console.log(`Selected file: ${file.name}`);
           });
         });
       }
@@ -203,9 +210,9 @@
         const loader = document.getElementById("loader");
         loader.style.display = "block";
 
-        document.getElementById("form1-submit").disabled = true
-        document.getElementById("form2-submit").disabled = true
-        document.getElementById("form3-submit").disabled = true
+        const formId = event.target.id;
+        const submitButton = document.getElementById(`${formId}-submit`);
+        submitButton.disabled = true;
 
         document.getElementById("success-alert").style.display = "none";
         document.getElementById("fail-alert").style.display = "none";
@@ -218,9 +225,10 @@
         })
           .then((response) => response.json())
           .then((data) => {
-            console.log(data);
             loader.style.display = "none";
-            if (data.message == 'success') {
+            submitButton.disabled = false;
+
+            if (data.message === "success") {
               document.getElementById("success-alert").style.display = "block";
               fetch(data.file_urls.video.url)
                 .then((response) => response.blob())
@@ -229,7 +237,7 @@
                   const a = document.createElement("a");
                   a.style.display = "none";
                   a.href = url;
-                  a.download = data.videoFileName; // Ensure 'data.videoFileName' is dynamically set
+                  a.download = data.videoFileName;
                   document.body.appendChild(a);
                   a.click();
                   window.URL.revokeObjectURL(url);
@@ -243,6 +251,7 @@
           })
           .catch(() => {
             loader.style.display = "none";
+            submitButton.disabled = false;
             document.getElementById("fail-alert").style.display = "block";
           });
       }
@@ -256,20 +265,16 @@
       document
         .getElementById("form3")
         .addEventListener("submit", handleFormSubmit);
-    </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script>
       function toggleSubmitButton(formInputsSelector, submitButtonId) {
         const inputs = document.querySelectorAll(formInputsSelector);
         const button = document.getElementById(submitButtonId);
 
         function checkInputs() {
-          const allFileSelected = Array.from(inputs).every(
+          const allFilesSelected = Array.from(inputs).every(
             (input) => input.files.length > 0
           );
-          button.disabled = !allFileSelected;
+          button.disabled = !allFilesSelected;
         }
 
         inputs.forEach((input) => {
@@ -283,5 +288,6 @@
       toggleSubmitButton(".form2-input", "form2-submit");
       toggleSubmitButton(".form3-input", "form3-submit");
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js"></script>
   </body>
 </html>
